--- a/catalogo.html
+++ b/catalogo.html
@@ -6,6 +6,7 @@
 	<title>Cachureando/catalogo</title>
 	<!-- citamos el estilo correspondiente a esta pagina usando el href -->
 	<link rel="stylesheet" type="text/css" href="css/estilo_catalogo.css">
+	<link rel="icon" href="/favicon.ico" type="image/x-icon">
 </head>
 <body class="contenedor">
 
