--- a/contacto.html
+++ b/contacto.html
@@ -5,6 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Cachureando/catalogo</title>
 	<link rel="stylesheet" type="text/css" href="css/estilo_contacto.css">
+	<link rel="icon" href="/favicon.ico" type="image/x-icon">
 </head>
 <body class="contenedor">
 
