--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 	<!-- en el head citamos el archivo correspondiente al estilo del index
 	cada html tiene su propio css debido a que fue la manera más facil de solucionar las 3 resoluciones -->
 	<link rel="stylesheet" type="text/css" href="css/estilo_index.css">
+	<link rel="icon" href="/favicon.ico" type="image/x-icon">
 </head>
 <body class="contenedor">
 
