--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 	<header class="header">
 		<h1>CACHUREANDO</h1>
 		<!-- Esto es nuestro encabezado el cual lleva un titulo y una imagen de fondo -->
+
 	</header>
 	<nav class="navbar">
 		<!-- para la barra de navegación creamos una lista con 3 columnas y 1 fila -->
@@ -43,6 +44,7 @@
 	<article class="contenido">
 		<h2>Conocenos</h2>
 
+		<!-- creamos una pequeña caja que da una breve descripción de nuestra empresa -->
 		<!-- creamos una pequeña caja que da una breve descripción de nuestra empresa -->
 					
 			<p>Nuestra empresa se dedica a la compra y venta de artículos de colección, en la búsqueda cuidadosa de articulos antiguos y usados pero en buenas condiciones, dando mayor importancia a los relojeria, como, relojes de bolsillo, relojes murales, relojes de arena, entre otros. Estamos ubicados en la quinta region y activos desde el año 2000 a la fecha. </p>
